@@ -52,6 +52,7 @@ Version 1.3.12+svn:
    * loading a content with invalid wml does not terminate the game
    * increased the precission off the mouse in the top row of the editor
      (closes bug #10219)
+   * undoing recruits is no longer allowed
 
 Version 1.3.12:
  * campaigns:
