@@ -17,5 +17,6 @@ archive and the following results where found for 687 files:
 before 1018.1 MB
 after    79.3 MB
 
-
+Undoing a recruit are no longer possible, they could still cause OOS errors in
+MP games.
 
